[gd_scene load_steps=4 format=3 uid="uid://quridjl6aioe"]

[ext_resource type="Theme" uid="uid://cfawl7b2vkeh" path="res://addons/GoLogger/Resources/BaseTheme.tres" id="1_d1jly"]
[ext_resource type="Script" path="res://addons/GoLogger/LogController/GoLoggerController.gd" id="1_sp6vx"]
[ext_resource type="Texture2D" uid="uid://gux11f2yqngh" path="res://addons/GoLogger/GoLogger_Icon_Flat.svg" id="3_wib7l"]

[node name="GoLoggerController" type="Control"]
z_index = 10
custom_minimum_size = Vector2(326, 62)
layout_mode = 3
anchors_preset = 0
offset_right = 326.0
offset_bottom = 62.0
grow_vertical = 0
theme = ExtResource("1_d1jly")
script = ExtResource("1_sp6vx")
metadata/_edit_vertical_guides_ = [5.0, 1915.0, 960.0]
metadata/_edit_horizontal_guides_ = [5.0, 1075.0, 540.0]

[node name="UpdateTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="GoLoggerIconFlat" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(44, 34)
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 49.0
offset_bottom = 57.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
mouse_filter = 1
icon = ExtResource("3_wib7l")
expand_icon = true

[node name="SessionStatusPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(61, 0)
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 66.0
offset_bottom = 57.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme = ExtResource("1_d1jly")

[node name="SessionStatusLabel" type="RichTextLabel" parent="SessionStatusPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_d1jly")
bbcode_enabled = true
text = "[font_size=6]
[center][font_size=12]Session:
[center][color=green]ON"

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(61, 0)
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 66.0
offset_bottom = 57.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("1_d1jly")
text = "Start"

[node name="CopyButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(61, 0)
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 66.0
offset_bottom = 57.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("1_d1jly")
text = "Copy"

[node name="StopButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(61, 0)
layout_mode = 2
offset_left = 5.0
offset_top = 5.0
offset_right = 66.0
offset_bottom = 57.0
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme = ExtResource("1_d1jly")
text = "Stop"
